@@ -1,5 +1,5 @@
 #!/bin/sh
-# $Id: buildconf.sh,v 1.10 2002-03-16 11:46:18 adam Exp $
+# $Id: buildconf.sh,v 1.11 2002-05-13 14:13:37 adam Exp $
 aclocal 
 libtoolize --automake --force 
 automake -a 
@@ -7,4 +7,4 @@ autoconf
 if [ -f config.cache ]; then
 	rm config.cache
 fi
-util/cvs-date.tcl include/yaz/yaz-date.h
+#util/cvs-date.tcl include/yaz/yaz-date.h
