@@ -1,10 +1,11 @@
 dnl YAZ Toolkit, Index Data 1994-2001
 dnl See the file LICENSE for details.
-dnl $Id: configure.in,v 1.72 2002-05-03 13:47:57 adam Exp $
+dnl $Id: configure.in,v 1.73 2002-05-13 14:13:37 adam Exp $
 AC_INIT(include/yaz/yaz-version.h)
 AM_INIT_AUTOMAKE(yaz, 1.8.7)
 dnl
 AC_SUBST(READLINE_LIBS)
+AC_SUBST(YAZ_CONF_CFLAGS)
 dnl ------ Checking programs
 AC_PROG_CC
 AC_PROG_CPP
@@ -93,6 +94,30 @@ if test "$checkBoth" = "1"; then
 fi
 AC_CHECK_FUNC(gethostbyname, , AC_CHECK_LIB(nsl, main, [LIBS="$LIBS -lnsl"]))
 dnl
+dnl ------ EXPAT
+expat=yes
+AC_ARG_WITH(expat,   [  --with-expat[=DIR]      EXPAT library in DIR],[expat=$withval])
+if test "$expat" != "no"; then
+	xLIBS="$LIBS";
+	xCFLAGS="$CFLAGS";
+	if test "$expat" != "yes"; then
+                EXPAT_CFLAGS="-I$expat/include"
+                EXPAT_LIBS="-L$expat/lib"
+		CFLAGS="$EXPAT_CFLAGS $CFLAGS"
+		LIBS="$EXPAT_LIBS $LIBS"
+	fi
+	AC_CHECK_LIB(expat,XML_ParserCreate,[LIBS="$LIBS -lexpat"])
+	if test "$ac_cv_lib_expat_XML_ParserCreate" = "yes"; then
+		AC_CHECK_HEADERS(expat.h)
+                if test "$ac_cv_header_expat_h" = "yes"; then
+                        YAZ_CONF_CFLAGS="$YAZ_CONF_CFLAGS -DYAZ_HAVE_EXPAT=1"
+                fi
+	else
+		LIBS="$xLIBS"
+		CFLAGS="$xCFLAGS"
+	fi
+fi
+dnl
 dnl ------ Open SSL
 openssl=no
 AC_ARG_WITH(openssl, [  --with-openssl[=DIR]    OpenSSL library in DIR], [openssl=$withval])
@@ -125,6 +150,7 @@ if test "$openssl" != "no"; then
 	CFLAGS="$xCFLAGS"
 fi
 AM_CONDITIONAL(ISSSL, test $USE_SSL = "1")
+dnl
 dnl ------ GNU Readline
 READLINE_SHARED_LIBADD=""
 AC_CHECK_LIB(ncurses, tgetent, [READLINE_SHARED_LIBADD="-lncurses"],
@@ -135,7 +161,7 @@ AC_CHECK_LIB(readline, readline, [READLINE_LIBS="$READLINE_LIBS -lreadline $READ
 AC_CHECK_LIB(history, add_history, [READLINE_LIBS="$READLINE_LIBS -lhistory"])
 if test "$ac_cv_lib_readline_readline" = "yes"; then
 	AC_CHECK_HEADERS(readline/readline.h readline/history.h)
-        OLDLIBS=$LIBS
+        xLIBS=$LIBS
         LIBS="$LIBS $READLINE_LIBS"
         AC_TRY_LINK([
 	#include <stdio.h>
@@ -155,7 +181,7 @@ if test "$ac_cv_lib_readline_readline" = "yes"; then
                 rl_completion_matches (0, 0);
         }
         ],AC_DEFINE(HAVE_READLINE_RL_COMPLETION_MATCHES))
-        LIBS=$OLDLIBS
+        LIBS=$xLIBS
 fi
 dnl ------ various functions
 AC_CHECK_FUNCS(vsnprintf gettimeofday poll)
