@@ -1,6 +1,9 @@
 Possible compatibility problems with earlier versions marked with '*'.
 
+
 --- 1.8.7 2002/MM/DD
+
+XML reader for data1 (EXPAT).
 
 Fixed bug in ZOOM connect that occurred on OpenBSD (maybe others). Patch
 by Oleg Kolobov.
